Use xor to zero out registers